# LOGIX

./: .gitignore  CMakeLists.txt  README.md
Engine/: CMakeLists.txt  LogSink.h
Engine/Include/Logix/Core/: ConsoleSink.h  LogCategory.h  LogLevel.h  LogMessage.h  LogSink.h  Logger.h  Types.h  Version.h
Engine/Src/Core/: ConsoleSink.cpp  LogCategory.cpp  LogLevel.cpp  LogMessage.cpp  Version.cpp
Sandbox/: CMakeLists.txt
Sandbox/Src/: main.cpp
